--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,16 +1,5 @@
 cmake_minimum_required(VERSION 3.10.2)
 
-# Enforce C++11 compiler flags
-include(CheckCXXCompilerFlag)
-CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
-CHECK_CXX_COMPILER_FLAG("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
-if(COMPILER_SUPPORTS_CXX11)
-  set(CMAKE_CXX_FLAGS "-std=c++11")
-elseif(COMPILER_SUPPORTS_CXX0X)
-  set(CMAKE_CXX_FLAGS "-std=c++0x")
-#else()                                       # break compiler with catkin build
-#  message(FATAL_ERROR "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different C++ compiler.")
-endif()
 
 project(last_letter_2)
 
@@ -30,14 +19,14 @@ find_package(gazebo REQUIRED)
 
 add_message_files(
   FILES
-  Joystick_input.msg
-  Input_signals.msg
-  Model_wrenches.msg
-  Model_states.msg
-  Air_data.msg
-  Control_signals.msg
-  Aero_wrenches.msg
-  Prop_wrenches.msg
+  joystick_input.msg
+  input_signals.msg
+  model_wrenches.msg
+  model_states.msg
+  air_data.msg
+  control_signals.msg
+  aero_wrenches.msg
+  prop_wrenches.msg
 )
 
 add_service_files(
