--- a/last_letter_2/package.xml
+++ b/last_letter_2/package.xml
@@ -17,7 +17,7 @@
     <build_depend>rosgraph_msgs</build_depend>
     <build_depend>sensor_msgs</build_depend>
     <build_depend>last_letter_2_msgs</build_depend>
-    <build_depend>last_letter_2_maths</build_depend>
+    <build_depend>last_letter_2_libs</build_depend>
     <build_depend>kdl_parser</build_depend>
 
     <build_export_depend>geometry_msgs</build_export_depend>
@@ -26,7 +26,7 @@
     <build_export_depend>rosgraph_msgs</build_export_depend>
     <build_export_depend>sensor_msgs</build_export_depend>
     <build_export_depend>last_letter_2_msgs</build_export_depend>
-    <build_export_depend>last_letter_2_maths</build_export_depend>
+    <build_export_depend>last_letter_2_libs</build_export_depend>
     <build_export_depend>kdl_parser</build_export_depend>
 
     <exec_depend>roscpp</exec_depend>
@@ -35,7 +35,7 @@
     <exec_depend>rosgraph_msgs</exec_depend>
     <exec_depend>sensor_msgs</exec_depend>
     <exec_depend>last_letter_2_msgs</exec_depend>
-    <exec_depend>last_letter_2_maths</exec_depend>
+    <exec_depend>last_letter_2_libs</exec_depend>
     <exec_depend>kdl_parser</exec_depend>
 
     <!-- The export tag contains other, unspecified, tags -->
