--- a/last_letter_2_libs/CMakeLists.txt
+++ b/last_letter_2_libs/CMakeLists.txt
@@ -7,16 +7,32 @@ find_package(catkin REQUIRED
   roscpp
   rosgraph_msgs
   std_srvs
+  geometry_msgs
 )
 find_package(Boost REQUIRED)
 
-catkin_package(DEPENDS
-  CATKIN_DEPENDS 
-  LIBRARIES math
+catkin_package(
+  INCLUDE_DIRS include
+  LIBRARIES last_letter_2_libs
 )
 
-include_directories(include ${catkin_INCLUDE_DIRS} ${Boost_INCLUDE_DIR})
+include_directories(include 
+  ${catkin_INCLUDE_DIRS} 
+  ${Boost_INCLUDE_DIR}
+)
 
-add_library(math src/math_lib.cpp)
+add_library(last_letter_2_libs src/last_letter_2_libs.cpp)
 
-target_link_libraries(math ${catkin_LIBRARIES})
+target_link_libraries(last_letter_2_libs ${catkin_LIBRARIES})
+
+
+install(TARGETS last_letter_2_libs
+  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
+
+install(DIRECTORY include/${PROJECT_NAME}/
+  DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
+  FILES_MATCHING PATTERN ".h" PATTERN ".hpp"
+  PATTERN ".svn" EXCLUDE)
